--- a/src/global.scss
+++ b/src/global.scss
@@ -74,8 +74,8 @@ h6 {
 
 .main-container {
     cursor: none;
-    width: 80vw;
-    height: 80vh;
+    width: 600px;
+    height: 600px;
     border: 1px solid #A020F0;
 }
 
@@ -85,4 +85,9 @@ h6 {
     align-items: center;
     width: 100vw;
     height: 100vh;
+}
+
+.maze-path {
+    width: 100%;
+    height: 100%;
 }
