--- a/src/global.scss
+++ b/src/global.scss
@@ -79,7 +79,7 @@ h6 {
     border: 1px solid #A020F0;
 }
 
-.homepage {
+.welcome {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -87,7 +87,7 @@ h6 {
     height: 100vh;
 }
 
-.homepage-form {
+.welcome-form {
     display: flex;
     flex-direction: column;
 }
@@ -95,4 +95,20 @@ h6 {
 .maze-path {
     width: 100%;
     height: 100%;
+}
+
+.cursor-ghost {
+    position: absolute;
+    top: -15px;
+    left: -15px;
+    width: 22px;
+    height: 22px;
+    pointer-events: none;
+}
+
+.cursor-username {
+    position: absolute;
+    top: 0;
+    left: 0;
+    white-space: nowrap;
 }
